# ticktick-mcp

./: .coverage  pyproject.toml
_bmad/bmm/: config.yaml
_bmad/implementation-artifacts/: .ticktick-sync-map.yaml  2-1-fix-subtask-update-logic.md  sprint-status.yaml
_bmad/planning-artifacts/: epics.md  project-context.md
tests/: test_client.py  test_config.py  test_formatters.py  test_models.py  test_token_store.py  test_tools.py  test_tools_extended.py
ticktick_mcp/: authenticate.py  cli.py
ticktick_mcp/src/: auth.py  client.py  config.py  errors.py  formatters.py  models.py  server.py  token_store.py
ticktick_mcp/src/tools/: __init__.py  _deps.py  batch.py  gtd.py  projects.py  search.py  subtasks.py  tasks.py
